# DiscordBot

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  prod.env
