[project]
name = "discord-bot"
version = "0.1.0"
description = "Python discord bot"
authors = [
    {name = "Pedro Egg",email = "pedro.eggg@gmail.com"}
]
readme = "README.md"
requires-python = "==3.11.2"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry]
package-mode = false